chore: lint UnoCSS

--- a/src/snippets/style.css
+++ b/src/snippets/style.css
@@ -5,14 +5,14 @@
 }
 
 body {
-  font-family: system-ui, -apple-system, Segoe UI, Rototo, Emoji, Helvetica, Arial, sans-serif;
+  font-family: system-ui, -apple-system, "Segoe UI", Rototo, Emoji, Helvetica, Arial, sans-serif;
 }
 
 #app {
+  margin-top: 60px;
+  color: #2c3e50;
   font-family: Avenir, Helvetica, Arial, sans-serif;
+  text-align: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
 }
